--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "license": "CC-BY-NC-ND-4.0",
   "dependencies": {
+    "@types/uuid": "^8.3.4",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2"
